--- a/chat.html
+++ b/chat.html
@@ -2,14 +2,22 @@
 <html lang="en" class="bg-white text-black dark:bg-black dark:text-white">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- already good -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShadowGPT | Liquid Glass Chat</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = { darkMode: 'media', theme: { extend: {} } };
   </script>
   <style>
-    body { margin:0; font-family:sans-serif; background:inherit; color:inherit; }
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background: inherit;
+      color: inherit;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
     .glass {
       backdrop-filter: blur(20px) saturate(180%);
@@ -17,41 +25,62 @@
       border-radius: 16px;
       box-shadow: 0 8px 32px rgba(0,0,0,0.1);
       transition: background-color 0.3s, box-shadow 0.3s;
-      padding: 0; /* let wrappers handle padding */
     }
     .dark .glass {
-      background-color: rgba(0,0,0,0.25);
+      background-color: rgba(0,0,0,0.35);
       box-shadow: 0 8px 32px rgba(0,0,0,0.2);
     }
 
+    header, footer {
+      padding: 1rem;
+      text-align: center;
+    }
+
     #chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
+      flex: 1;
       overflow-y: auto;
       padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      scroll-behavior: smooth;
+      margin-bottom: 4.5rem; /* Reserve space for input area */
     }
 
     .chat-bubble {
       border-radius: 1rem;
       padding: 0.75rem 1rem;
-      max-width: 90%;          /* changed for mobile friendliness */
+      max-width: 90%;
       word-wrap: break-word;
+      margin: 0.25rem 0;
     }
-
     .chat-bubble.user {
       align-self: flex-end;
+      background-color: rgba(0, 120, 255, 0.15);
+    }
+    .dark .chat-bubble.user {
+      background-color: rgba(0, 120, 255, 0.25);
     }
     .chat-bubble.bot {
       align-self: flex-start;
+      background-color: rgba(255,255,255,0.25);
+    }
+    .dark .chat-bubble.bot {
+      background-color: rgba(0,0,0,0.35);
     }
 
-    /* Make sure input area + button are easy to tap on mobile */
     #input-area {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
       display: flex;
       gap: 0.5rem;
       padding: 0.5rem;
+      background: inherit;
+      align-items: center;
+      z-index: 100;
     }
+
     #user-input {
       flex: 1;
       padding: 0.75rem 1rem;
@@ -61,51 +90,75 @@
       background: transparent;
       color: inherit;
     }
+
     #send-btn {
       padding: 0.75rem 1.25rem;
       font-size: 1rem;
       border: none;
       border-radius: 0.75rem;
+      cursor: pointer;
     }
 
-    /* Example media‑query: when screen is small, adjust container margins/padding */
     @media (max-width: 640px) {
-      body {
-        font-size: 16px;
-      }
-      header, footer {
-        margin: 0.5rem;
-      }
-      header {
-        font-size: 1.5rem;
-      }
+      body { font-size: 16px; }
+      header, footer { margin: 0.5rem; font-size: 1.5rem; }
     }
   </style>
 </head>
-<body class="flex flex-col min-h-screen">
+<body>
 
-  <header class="p-4 text-center text-2xl font-bold glass mx-4 mt-4">Chat bot</header>
+  <header class="glass mx-4 mt-4 text-2xl font-bold">Chat bot</header>
 
   <main class="flex-1 container mx-auto px-0 py-0 flex flex-col glass mx-4 my-2">
     <div id="chat-container">
-      <div class="chat-bubble bot glass">Welcome, shadow walker. Ask anything you desire.</div>
-    </div>
-
-    <div id="input-area" class="glass mx-4 mb-4 flex items-center">
-      <input type="text" id="user-input" placeholder="Type your message..."
-             aria-label="Type your message">
-      <button id="send-btn"><i data-feather="send"></i> Send</button>
+      <div class="chat-bubble bot glass">Welcome here.</div>
     </div>
   </main>
+
+  <div id="input-area" class="glass mx-4 mb-4">
+    <input type="text" id="user-input" placeholder="Type your message..." aria-label="Type your message">
+    <button id="send-btn"><i data-feather="send"></i> Send</button>
+  </div>
 
   <footer class="text-center p-4 text-sm opacity-60 glass mx-4 mb-4 rounded-xl">
     © Cid Kageno
   </footer>
 
+  <script src="https://unpkg.com/feather-icons"></script>
   <script>
-    // same JS logic as before (queryAI, sendMessage, etc.)
     feather.replace();
-    ...
+
+    const chatContainer = document.getElementById('chat-container');
+    const userInput = document.getElementById('user-input');
+    const sendBtn = document.getElementById('send-btn');
+
+    function appendMessage(text, sender = 'bot') {
+      const bubble = document.createElement('div');
+      bubble.classList.add('chat-bubble', sender, 'glass');
+      bubble.textContent = text;
+      chatContainer.appendChild(bubble);
+      chatContainer.scrollTop = chatContainer.scrollHeight;
+    }
+
+    function sendMessage() {
+      const message = userInput.value.trim();
+      if (!message) return;
+      appendMessage(message, 'user');
+      userInput.value = '';
+
+      // Placeholder for AI response
+      setTimeout(() => {
+        appendMessage("I have received your message: " + message, 'bot');
+      }, 500);
+    }
+
+    sendBtn.addEventListener('click', sendMessage);
+    userInput.addEventListener('keypress', function(e){
+      if (e.key === 'Enter') sendBtn.click();
+    });
+
+    window.onload = () => userInput.focus();
   </script>
+
 </body>
 </html>
