--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
       display: flex;
       flex-direction: column;
       scroll-behavior: smooth;
-      margin-bottom: 4.5rem; /* Reserve space for input area */
+      margin-bottom: 4.5rem; /* space for input area */
     }
 
     .chat-bubble {
@@ -111,7 +111,7 @@
 
   <main class="flex-1 container mx-auto px-0 py-0 flex flex-col glass mx-4 my-2">
     <div id="chat-container">
-      <div class="chat-bubble bot glass">Welcome here.</div>
+      <div class="chat-bubble bot glass">Welcome, shadow walker. Ask anything you desire.</div>
     </div>
   </main>
 
@@ -140,16 +140,21 @@
       chatContainer.scrollTop = chatContainer.scrollHeight;
     }
 
-    function sendMessage() {
+    async function sendMessage() {
       const message = userInput.value.trim();
       if (!message) return;
       appendMessage(message, 'user');
       userInput.value = '';
 
-      // Placeholder for AI response
-      setTimeout(() => {
-        appendMessage("I have received your message: " + message, 'bot');
-      }, 500);
+      try {
+        const response = await fetch(`https://noobs-api.top/dipto/baby?text=${encodeURIComponent(message)}`);
+        const data = await response.json();
+        const botReply = data.data || "Sorry, no response from the API.";
+        appendMessage(botReply, 'bot');
+      } catch (err) {
+        console.error(err);
+        appendMessage("Error contacting API.", 'bot');
+      }
     }
 
     sendBtn.addEventListener('click', sendMessage);
